// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert source to tokens "% " 1`] = `
Array [
  Array [
    "enter",
    "mystComment",
    "1.1",
    "1.3",
  ],
  Array [
    "enter",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "exit",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "enter",
    "data",
    "1.2",
    "1.3",
  ],
  Array [
    "exit",
    "data",
    "1.2",
    "1.3",
  ],
  Array [
    "exit",
    "mystComment",
    "1.1",
    "1.3",
  ],
]
`;

exports[`Convert source to tokens "% abc" 1`] = `
Array [
  Array [
    "enter",
    "mystComment",
    "1.1",
    "1.6",
  ],
  Array [
    "enter",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "exit",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "enter",
    "data",
    "1.2",
    "1.6",
  ],
  Array [
    "exit",
    "data",
    "1.2",
    "1.6",
  ],
  Array [
    "exit",
    "mystComment",
    "1.1",
    "1.6",
  ],
]
`;

exports[`Convert source to tokens "% abc\\n% def" 1`] = `
Array [
  Array [
    "enter",
    "mystComment",
    "1.1",
    "1.6",
  ],
  Array [
    "enter",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "exit",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "enter",
    "data",
    "1.2",
    "1.6",
  ],
  Array [
    "exit",
    "data",
    "1.2",
    "1.6",
  ],
  Array [
    "exit",
    "mystComment",
    "1.1",
    "1.6",
  ],
  Array [
    "enter",
    "lineEnding",
    "1.6",
    "2.1",
  ],
  Array [
    "exit",
    "lineEnding",
    "1.6",
    "2.1",
  ],
  Array [
    "enter",
    "mystComment",
    "2.1",
    "2.6",
  ],
  Array [
    "enter",
    "mystCommentMarker",
    "2.1",
    "2.2",
  ],
  Array [
    "exit",
    "mystCommentMarker",
    "2.1",
    "2.2",
  ],
  Array [
    "enter",
    "data",
    "2.2",
    "2.6",
  ],
  Array [
    "exit",
    "data",
    "2.2",
    "2.6",
  ],
  Array [
    "exit",
    "mystComment",
    "2.1",
    "2.6",
  ],
]
`;

exports[`Convert source to tokens "%" 1`] = `
Array [
  Array [
    "enter",
    "mystComment",
    "1.1",
    "1.2",
  ],
  Array [
    "enter",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "exit",
    "mystCommentMarker",
    "1.1",
    "1.2",
  ],
  Array [
    "exit",
    "mystComment",
    "1.1",
    "1.2",
  ],
]
`;
